--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "my-electron-app",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "Hello World",
   "main": "main.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
-  "repository": {},
+  "repository": "https://github.com/Lozane0621/my-electron-app",
   "keywords": [
     "vue",
     "electron"
