--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "want-want-app",
-  "version": "1.1.2",
-  "description": "Shiyinfo APP",
+  "version": "1.1.9",
+  "description": "shinyinfo",
   "main": "main.js",
   "scripts": {
     "start": "electron-forge start",
